--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script defer src="./js/todo.js"></script>
+    <script defer src="./js/weather.js"></script>
 </head>
 
 <body>
@@ -22,7 +23,15 @@
         <div class="notes-container"></div>
         <div class="weather-time-todo-container">
 
-            <div class="weather-time-container"></div>
+            <div class="weather-time-container">
+                <div>
+                    <input type="text" class="city-input inputs" placeholder="Enter city name">
+                    <button class="fetch-weather inputs">Get Weather</button>
+                </div>
+                <div class="weather-info">
+             
+                </div>
+            </div>
 
             <div class="todo-container">
                 <div class="todo-input-grid">
