--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <title>PulseQuill</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/todo.css">
+    <link rel="stylesheet" href="./css/weather.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.10/css/weather-icons.min.css">
+    <script defer src="./js/main.js"></script>
     <script defer src="./js/todo.js"></script>
     <script defer src="./js/weather.js"></script>
+
 </head>
 
 <body>
@@ -24,14 +28,21 @@
         <div class="weather-time-todo-container">
 
             <div class="weather-time-container">
-                <div>
-                    <input type="text" class="city-input inputs" placeholder="Enter city name">
-                    <button class="fetch-weather inputs">Get Weather</button>
-                </div>
-                <div class="weather-info">
-             
-                </div>
+   
+                    <div class="weather-input-grid">
+                        <input type="text" class="city-input inputs" placeholder="Enter city name">
+                        <button class="fetch-weather inputs">
+                            <img src = "icons/search.png" alt = "search" class = "search-icon">
+                        </button>
+                    </div>
+
+                    <div class="weather-time-info">
+                        <div class="weather-info"></div>
+                        <div class="time-info"></div>
+                    </div>
+
             </div>
+           
 
             <div class="todo-container">
                 <div class="todo-input-grid">
