--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script defer src="./js/main.js"></script>
     <script defer src="./js/todo.js"></script>
     <script defer src="./js/weather.js"></script>
+    <link rel="shortcut icon" href="./icons/PulseQuill.ico" /> 
 
 </head>
 
