--- a/index.html
+++ b/index.html
@@ -11,64 +11,64 @@
     <link rel="stylesheet" href="./css/clock.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+          rel="stylesheet">
     <script defer src="./js/main.js"></script>
     <script defer src="./js/todo.js"></script>
     <script defer src="./js/weather.js"></script>
     <script defer src="./js/clock.js"></script>
-    <link rel="shortcut icon" href="./icons/PulseQuill.ico" /> 
-
+    <link rel="shortcut icon" href="./icons/PulseQuill.ico"/>
 </head>
 
 <body>
-    <!-- 
-    <nav>
-    </nav> -->
+<!--
+<nav>
+</nav> -->
 
-    <div class="main-container">
-        <div class="notes-container"></div>
-        <div class="weather-time-todo-container">
+<div class="main-container">
+    <div class="notes-container"></div>
+    <div class="weather-time-todo-container">
 
-            <div class="weather-time-container">
-   
-                    <div class="weather-input-grid">
-                        <input type="text" class="city-input inputs" placeholder="Enter city name">
-                        <button class="fetch-weather inputs">
-                            <img src = "icons/search.png" alt = "search" class = "search-icon">
-                        </button>
-                    </div>
+        <div class="weather-time-container">
 
-                    <div class="weather-time-info">
-                        <div class="weather-info"></div>
-                        <div class="time-info">
-                                <div class="clock">
-                                    <div class="hour hand" id="hour"></div>
-                                    <div class="minute hand" id="minute"></div>
-                                    <div class="seconds hand" id="seconds"></div>
-                                    <div class="center-point hand"></div>
-                                </div>
-                        </div>
-                    </div>
-
+            <div class="weather-input-grid">
+                <input type="text" class="city-input inputs" placeholder="Enter city name">
+                <button class="fetch-weather inputs">
+                    <img src="icons/search.png" alt="search" class="search-icon">
+                </button>
             </div>
-           
 
-            <div class="todo-container">
-                <div class="todo-input-grid">
-                    <input class="todo-name inputs" placeholder="Todo name">
-                    <input type="date" class="todo-date inputs">
-                    <button class="todo-add inputs">
-                        <img src = "icons/add.svg" alt = "Add" class = "todo-add-icon">
-                    </button>
+            <div class="weather-time-info">
+                <div class="weather-info"></div>
+                <div class="time-info">
+                    <div class="clock">
+                        <div class="hour hand" id="hour"></div>
+                        <div class="minute hand" id="minute"></div>
+                        <div class="seconds hand" id="seconds"></div>
+                        <div class="center-point hand"></div>
+                    </div>
                 </div>
-                <div class="todo-list"></div>
             </div>
 
         </div>
-    </div>
 
-    <!-- <footer>
-    </footer> -->
+
+        <div class="todo-container">
+            <div class="todo-input-grid">
+                <input class="todo-name inputs" placeholder="Todo name">
+                <input type="date" class="todo-date inputs">
+                <button class="todo-add inputs">
+                    <img src="icons/add.svg" alt="Add" class="todo-add-icon">
+                </button>
+            </div>
+            <div class="todo-list"></div>
+        </div>
+
+    </div>
+</div>
+
+<!-- <footer>
+</footer> -->
 
 </body>
 
