--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <button id="underline" class="option-button format">
                 <p class="fa-solid fa-underline"></p>
             </button>
-            <button id="strike" class="option-button format">
+            <button id="strikeThrough" class="option-button format">
                 <p class="fa-solid fa-strikethrough"></p>
             </button>
             
@@ -52,28 +52,20 @@
                 <p class="fa-solid fa-redo"></p>
             </button>
 
-            <button id="justify-left" class="option-button align">
+            <button id="justifyLeft" class="option-button align">
                 <p class="fa-solid fa-align-left"></p>
             </button>
-            <button id="justify-center" class="option-button align">
+            <button id="justifyCenter" class="option-button align">
                 <p class="fa-solid fa-align-center"></p>
             </button>
-            <button id="justify-right" class="option-button align">
+            <button id="justifyRight" class="option-button align">
                 <p class="fa-solid fa-align-right"></p>
             </button>
-            <button id="justify-full" class="option-button align">
+            <button id="justifyFull" class="option-button align">
                 <p class="fa-solid fa-align-justify"></p>
             </button>
 
-            <!-- <select id="format-block" class="advanced-options">
-                <option value="H1">H1</option>
-                <option value="H2">H2</option>
-                <option value="H3">H3</option>
-                <option value="H4">H4</option>
-                <option value="H5">H5</option>
-                <option value="H6">H6</option>
-            </select> -->
-            <select id="font-size" class="advanced-options">
+            <select id="fontSize" class="advanced-options">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3" selected>3</option>
