feat: button highlight now changes colors depending on choose color in colorPicker

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <option value="7">7</option>
                 </select>
 
-                <button id="colorPicker" class="option-button">
+                <button id="colorPicker">
                     <input type="color" id="foreColor" class="advanced-options color"/>
                 </button>
 
