--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PulseQuill</title>
+
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/todo.css">
     <link rel="stylesheet" href="./css/weather.css">
@@ -32,6 +33,8 @@
     <div class="main-container">
         <div class="notes-container">
             <div class="notes-toolbar">
+
+
                 <button id="bold" class="option-button format">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                         stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bold">
@@ -56,22 +59,7 @@
                     </svg>
                 </button>
 
-                <button id="undo" class="option-button">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="feather feather-rotate-ccw">
-                        <polyline points="1 4 1 10 7 10"></polyline>
-                        <path d="M3.51 15a9 9 0 1 0 2.13-9.36L1 10"></path>
-                    </svg>
-                </button>
-                <button id="redo" class="option-button">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="feather feather-rotate-cw">
-                        <polyline points="23 4 23 10 17 10"></polyline>
-                        <path d="M20.49 15a9 9 0 1 1-2.12-9.36L23 10"></path>
-                    </svg>
-                </button> 
+
 
                 <button id="justifyLeft" class="option-button align">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -113,6 +101,23 @@
                         <line x1="21" y1="18" x2="3" y2="18"></line>
                     </svg>
                 </button>
+                <!--
+                <button id="undo" class="option-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="feather feather-rotate-ccw">
+                        <polyline points="1 4 1 10 7 10"></polyline>
+                        <path d="M3.51 15a9 9 0 1 0 2.13-9.36L1 10"></path>
+                    </svg>
+                </button>
+                <button id="redo" class="option-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="feather feather-rotate-cw">
+                        <polyline points="23 4 23 10 17 10"></polyline>
+                        <path d="M20.49 15a9 9 0 1 1-2.12-9.36L23 10"></path>
+                    </svg>
+                </button>  -->
 
                 <select id="fontSize" class="advanced-options">
                     <option value="1">1</option>
@@ -125,7 +130,7 @@
                 </select>
 
                 <button id="colorPicker">
-                    <input type="color" id="foreColor" class="advanced-options color"/>
+                    <input type="color" id="foreColor" class="advanced-options color" />
                 </button>
 
             </div>
