--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
                     </svg>
                 </button>
 
-
-
-                <button id="justifyLeft" class="option-button align">
+                <button id="justifyLeft" class="option-button align active">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                         stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                         class="feather feather-align-left">
