--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="./css/notes.css">
     <link rel="stylesheet" href="./css/search.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -23,6 +22,7 @@
     <script defer src="./js/weather.js"></script>
     <script defer src="./js/clock.js"></script>
     <script defer src="./js/notes.js"></script>
+    <script defer src="./js/search.js"></script>
     <link rel="shortcut icon" href="./icons/PulseQuill.ico" />
 </head>
 
@@ -31,7 +31,7 @@
         <div class="i">
             <div class="i-card">
                 <label class="i-card-label">Search the internet</label>
-                <div class="i-container">
+                <form class="i-container">
                     <div class="i-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="#657789" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
@@ -40,11 +40,13 @@
                             <line x1="21" y1="21" x2="16.65" y2="16.65" /></svg>
                     </div>
                     <div class="i-input-container">
-                        <input class="i-input" placeholder="It just can't be pizza..." />
+                        <input id="i-input" class="i-input" placeholder="Wow, you shouldn't be seeing that.." />
                     </div>
-                </div>
+                </form>
             </div>
         </div>
+        
+        
 
         <div class="main-container">
             <div class="notes-container">
