style: Improve grid margins, fix search icon, and enhance search button
- Adjusted margin sizes on grid elements for better spacing
- Fixed the search icon not triggering searches upon click
- Added hover effects to the search button for a more interactive UI
- Conducted code cleanup for improved readability

--- a/index.html
+++ b/index.html
@@ -32,13 +32,9 @@
             <div class="i-card">
                 <label class="i-card-label">Search the internet</label>
                 <form class="i-container">
-                    <div class="i-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                            stroke="#657789" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
-                            class="feather feather-search">
-                            <circle cx="11" cy="11" r="8" />
-                            <line x1="21" y1="21" x2="16.65" y2="16.65" /></svg>
-                    </div>
+                    <button class="i-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+                    </button>
                     <div class="i-input-container">
                         <input id="i-input" class="i-input" placeholder="Wow, you shouldn't be seeing that.." />
                     </div>
