--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     </button>
                     <div class="i-input-container">
                         <input id="i-input" class="i-input" placeholder="Wow, you shouldn't be seeing that.." />
+                        <p style="display: none;">test</p>
                     </div>
                 </form>
             </div>
